--- a/WebUI3/ClientApp/package.json
+++ b/WebUI3/ClientApp/package.json
@@ -26,11 +26,11 @@
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
-    "core-js": "^3.2.0",
     "fontawesome": "^5.6.3",
     "jquery": "3.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
